# orm-patterns-datajoint

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
orm_patterns_datajoint/: __init__.py  table_import_checks.py  table_job.py
orm_patterns_datajoint/config/: model.py  tools.py
